--- a/CapaPresentacionAdmin/Views/Home/Usuarios.cshtml
+++ b/CapaPresentacionAdmin/Views/Home/Usuarios.cshtml
@@ -4,5 +4,53 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Usuarios</h2>
+<ol class="breadcrumb mb-4 mt-4">
+    <li class="breadcrumb-item"><a href="index.html">Resumen</a></li>
+    <li class="breadcrumb-item active">Charts</li>
+</ol>
 
+
+<div class="card">
+    <div class="card-header">
+        <i class="fas fa-users me-1"></i>Lista de Usuarios
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-12">
+                <button type="button" class="btn btn-success">Crear Nuevo</button>
+            </div>
+        </div>
+        <hr />
+        <table id="tabla" class="diaplay border-cell" style="width:100%">
+            <thead>
+                <tr>
+                    <th>Nombres</th>
+                    <th>Apellidos</th>
+                    <th>Correo</th>
+                    <th>Activo</th>
+                </tr>
+            </thead>
+            <tbody>
+                
+                
+            </tbody>
+        </table>
+    </div>
+</div>
+
+@section scripts
+{
+    <script>
+        jQuery.ajax({
+            url: '@Url.Action("ListarUsuarios", "Home")',
+            type: 'GET',
+            dataType: "json",
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                debugger;
+                var texto1 = "Hola soy un texto 1"
+                console.log(data)
+            }
+        })
+    </script>
+    }
