--- a/CapaPresentacionAdmin/Views/Home/Usuarios.cshtml
+++ b/CapaPresentacionAdmin/Views/Home/Usuarios.cshtml
@@ -125,7 +125,7 @@
                 },
                 {
                     "defaultContent": '<button type="button" class="btn btn-primary btn-sm btn-editar"> <i class="fas fa-pen"></i></button>' +
-                        '<button type="button" class="btn btn-danger btn-sm ms-2"> <i class="fas fa-trash"></i></button>',
+                        '<button type="button" class="btn btn-danger btn-sm ms-2 btn-eliminar"> <i class="fas fa-trash"></i></button>',
                     "orderable": false,
                     "searchable": false,
                     "width":"90px"
@@ -147,7 +147,7 @@
             $("#txtcorreo").val("");
             $("#cboactivo").val("");
             $("#mensajeError").hide();
-           
+
             if (json != null) {
                 //Tiene datos o valores el método
                 $("#txtid").val(json.ID_USUARIO);
@@ -167,6 +167,46 @@
             abrirModal(data);
         })
 
+        $("#tabla tbody").on("click", ".btn-eliminar", function () {
+            var usuarioSeleccionado = $(this).closest("tr");
+            var data = tabladata.row(usuarioSeleccionado).data();
+
+            swal({
+                title: "Está seguro?",
+                text: "¿Desea eliminar el usuario?",
+                type: "warning",
+                showCancelButton: true,
+                confirmButtonClass: "btn-primary",
+                confirmButtonText: "Sí",
+                cancelButtonText:"No",
+                closeOnConfirm: true
+            },
+                function () {
+
+                    jQuery.ajax({
+                        url: '@Url.Action("EliminarUsuario", "Home")',
+                        type: 'POST',
+                        data: JSON.stringify({ id: data.ID_USUARIO }),
+                        dataType: "json",
+                        contentType: "application/json; charset=utf-8",
+                        success: function (data) {
+                            //debugger;
+                            if (data.resultado) {
+                                tabladata.row(usuarioSeleccionado).remove().draw();
+                            } else {
+                                swal("No sé pudo eliminar", data.mensaje, "error");
+                            }
+                        },
+                        error: function (error) {
+                            console.log(error);
+                        }
+                    })
+                });
+
+            console.log(data);
+
+        })
+
         function Guardar() {
 
             var Usuario = {
@@ -177,7 +217,7 @@
                 NOMBRES: $("#txtnombres").val(),
 
             }
-            
+
             jQuery.ajax({
                 url: '@Url.Action("GuardarUsuario", "Home")',
                 type: 'POST',
@@ -186,8 +226,9 @@
                 contentType: "application/json; charset=utf-8",
                 success: function (data) {
 
+                    $(".modal-body").LoadingOverlay("hide");
                     //debugger;
-                    
+
                     //Usuario Nuevo
                     if (Usuario.ID_USUARIO == 0) {
                         //Si el ID(Data) retornado(AutoGenerado) es distinto de cero
@@ -200,9 +241,9 @@
                         } else {
                             $("#mensajeError").text(data.mensaje);
                             $("#mensajeError").show();
-                            
+
                         }
-                      
+
                     } else { //Usuario EDITAR
                         // alert("Editar Usuario")
                         if (data.resultado) {
@@ -214,25 +255,32 @@
                             $("#mensajeError").show();
 
                         }
-                        
-                       
-                        
+
+
+
                     }
                 },
                 error: function (error) {
-                    console.log(error)
+                    $(".modal-body").LoadingOverlay("hide");
+                    $("#mensajeError").text(data.mensaje);
+                    $("#mensajeError").show();
+                    //console.log(error)
                 },
                 beforeSend: function () {
-
+                    $(".modal-body").LoadingOverlay("show", {
+                        imageResizeFactor: 2,
+                        text: "Cargando...",
+                        size: 14
+                    });
                 }
-            
+
 
             });
 
-           
+
         }
 
 
-        
+
     </script>
 }
